--- a/Info-Trabajo-Final/Games.html
+++ b/Info-Trabajo-Final/Games.html
@@ -53,15 +53,15 @@
         </div>
 
         <div class="puzzle">
-            <div>arrastre y suelte la imagen aqui</div>
-            <div>arrastre y suelte la imagen aqui</div>
-            <div>arrastre y suelte la imagen aqui</div>
+            <div class="destino1">arrastre y suelte la imagen aqui</div>
+            <div class="destino2">arrastre y suelte la imagen aqui</div>
+            <div class="destino3">arrastre y suelte la imagen aqui</div>
         </div>
         
         <div class="puzzleImages">
-            <div><img src="./assets/imagenes/Rompe1.png" alt=""></div>
-            <div><img src="./assets/imagenes/Rompe2.png" alt=""></div>
-            <div><img src="./assets/imagenes/Rompe3.png" alt=""></div>
+            <div><img id="img1" src="./assets/imagenes/Rompe1.png" alt="izquierda"></div>
+            <div><img id="img2" src="./assets/imagenes/Rompe2.png" alt="centro"></div>
+            <div><img id="img3" src="./assets/imagenes/Rompe3.png" alt="derecha"></div>
         </div>
     
     </main>
