tipeo arreglado, sigue sin funcionar el puzzle :(

--- a/Info-Trabajo-Final/Games.html
+++ b/Info-Trabajo-Final/Games.html
@@ -53,9 +53,9 @@
         </div>
 
         <div class="puzzle">
-            <div class="destino1">arrastre y suelte la imagen aqui</div>
-            <div class="destino2">arrastre y suelte la imagen aqui</div>
-            <div class="destino3">arrastre y suelte la imagen aqui</div>
+            <div id="destino1">arrastre y suelte la imagen aqui</div>
+            <div id="destino2">arrastre y suelte la imagen aqui</div>
+            <div id="destino3">arrastre y suelte la imagen aqui</div>
         </div>
         
         <div class="puzzleImages">
